--- a/8.0/config/supervisord.conf
+++ b/8.0/config/supervisord.conf
@@ -33,9 +33,9 @@ stopwaitsecs=3600
 # roadrunner
 # command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --server=roadrunner --host=0.0.0.0 --rpc-port=6001 --port=8000
 # swoole
-# command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
+# command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
 #
-command=/usr/bin/php -d variables_order=EGPCS /var/www/html/artisan octane:start --host=0.0.0.0 --port=8000 --max-requests=250
+command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --host=0.0.0.0 --port=8000 --max-requests=250
 user=www-data
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
