--- a/8.1/nginx-server-temps/laravel-octane.conf
+++ b/8.1/nginx-server-temps/laravel-octane.conf
@@ -1,4 +1,4 @@
-# https://laravel.com/docs/8.x/octane#serving-your-application-via-nginx
+# https://laravel.com/docs/9.x/octane#serving-your-application-via-nginx
 
 map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -8,9 +8,9 @@ map $http_upgrade $connection_upgrade {
 server {
     listen 80;
     listen [::]:80;
-    server_name domain.com;
+    # server_name domain.com;
     server_tokens off;
-    root /var/www/site/public;
+    root ${NGINX_SERVER_ROOT};
 
     index index.php;
 
