--- a/8.2/nginx-server-temps/laravel-octane.conf
+++ b/8.2/nginx-server-temps/laravel-octane.conf
@@ -1,4 +1,4 @@
-# https://laravel.com/docs/8.x/octane#serving-your-application-via-nginx
+# @see https://laravel.com/docs/10.x/octane#serving-your-application-via-nginx
 
 map $http_upgrade $connection_upgrade {
     default upgrade;
@@ -10,7 +10,7 @@ server {
     listen [::]:80;
     server_name domain.com;
     server_tokens off;
-    root /var/www/site/public;
+    root ${NGINX_SERVER_ROOT};
 
     index index.php;
 
@@ -28,7 +28,7 @@ server {
     location = /robots.txt  { access_log off; log_not_found off; }
 
     access_log off;
-    error_log  /var/log/nginx/site.com-error.log error;
+    error_log  /var/log/nginx/domain.com-error.log error;
 
     error_page 404 /index.php;
 
