--- a/8.2/php-fpm.conf
+++ b/8.2/php-fpm.conf
@@ -16,9 +16,13 @@ group = www-data
 ;                            (IPv6 and IPv4-mapped) on a specific port;
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
-; listen = unix:/run/php/php-fpm7.sock
-listen = 127.0.0.1:9000
+; listen = unix:/run/php/php-fpm.sock
+; listen = unix:/var/run/php/php-fpm.sock
+; listen = 127.0.0.1:9000
 
+listen = /var/run/php-fpm.sock
+listen.owner = www-data
+listen.group = www-data
 
 ; Enable status page
 pm.status_path = /fpm-status
