--- a/7.3/test/supervisord.conf
+++ b/7.3/test/supervisord.conf
@@ -1,14 +1,5 @@
 [program:php-fpm]
-command=php-fpm7 -F
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-autorestart=true
-startretries=3
-
-[program:nginx]
-command=nginx
+command=php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -27,14 +18,22 @@ redirect_stderr=true
 
 [program:laravel-worker]
 process_name=%(program_name)s_%(process_num)02d
-command=php /var/www/site/artisan queue:work sqs --sleep=3 --tries=3 --max-time=3600
+command=php /var/www/site/artisan queue:work --sleep=3 --tries=3 --max-time=3600
 autostart=true
 autorestart=true
 stopasgroup=true
 killasgroup=true
-user=forge
+user=www-data
 numprocs=4
 redirect_stderr=true
 stdout_logfile=/var/www/site/worker.log
 stopwaitsecs=3600
 
+[program:nginx]
+command=nginx
+stdout_logfile=/dev/stdout
+stdout_logfile_maxbytes=0
+stderr_logfile=/dev/stderr
+stderr_logfile_maxbytes=0
+autorestart=true
+startretries=3
