--- a/7.4/config-examples/supervisord.conf
+++ b/7.4/config-examples/supervisord.conf
@@ -1,5 +1,5 @@
 [program:php-fpm]
-command=php-fpm8 -F
+command=php-fpm -F
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
@@ -28,19 +28,6 @@ numprocs=4
 redirect_stderr=true
 stdout_logfile=/var/www/site/worker.log
 stopwaitsecs=3600
-
-[program:laravel-octane]
-# roadrunner
-# command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --server=roadrunner --host=0.0.0.0 --rpc-port=6001 --port=8000
-# swoole
-# command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --server=swoole --host=0.0.0.0 --port=8000
-#
-command=/usr/bin/php -d variables_order=EGPCS /var/www/site/artisan octane:start --host=0.0.0.0 --port=8000 --max-requests=250
-user=www-data
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
 
 [program:nginx]
 command=nginx
