--- a/8.0/nginx-server-temps/laravel-octane.conf
+++ b/8.0/nginx-server-temps/laravel-octane.conf
@@ -7,10 +7,10 @@ map $http_upgrade $connection_upgrade {
 
 server {
     listen 80;
-    listen [::]:80;
-    server_name domain.com;
+    # listen [::]:80;
+    # server_name domain.com;
     server_tokens off;
-    root /var/www/site/public;
+    root ${NGINX_SERVER_ROOT};
 
     index index.php;
 
@@ -48,6 +48,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        proxy_pass http://127.0.0.1:8000$suffix;
+        # proxy_pass http://127.0.0.1:8000$suffix;
+        proxy_pass unix:/run/php-fpm.sock$suffix;
     }
 }
