--- a/8.0/nginx-server-temps/thinkphp.conf
+++ b/8.0/nginx-server-temps/thinkphp.conf
@@ -10,17 +10,22 @@ server {
     # ssl_certificate_key /etc/nginx/ssl/default.key;
 
     # server_name example.test;
-    root /var/www/public;
+    root ${NGINX_SERVER_ROOT};
     index index.php index.html index.htm;
 
     location / {
-         try_files $uri $uri/ /index.php$is_args$args;
+        #  try_files $uri $uri/ /index.php$is_args$args;
+        if (!-e $request_filename) {
+            rewrite ^/(.*)$ /index.php?s=$1 last;
+            break;
+        }
     }
 
     location ~ \.php$ {
         try_files $uri /index.php =404;
         # fastcgi_pass php-upstream;
-        fastcgi_pass php-fpm:9000;
+        # fastcgi_pass 127.0.0.1:9000;
+        fastcgi_pass unix:/run/php-fpm.sock;
         fastcgi_index index.php;
         fastcgi_buffers 16 16k;
         fastcgi_buffer_size 32k;
