--- a/8.0/php-fpm.conf
+++ b/8.0/php-fpm.conf
@@ -17,8 +17,11 @@ group = www-data
 ;   '/path/to/unix/socket' - to listen on a unix socket.
 ; Note: This value is mandatory.
 ; listen = unix:/run/php/php-fpm7.sock
-listen = 127.0.0.1:9000
+; listen = 127.0.0.1:9000
 
+listen = /var/run/php-fpm.sock
+listen.owner = www-data
+listen.group = www-data
 
 ; Enable status page
 pm.status_path = /fpm-status
