--- a/8.1/Dockerfile
+++ b/8.1/Dockerfile
@@ -1,4 +1,4 @@
-FROM alpine:edge
+FROM alpine:3.18
 
 LABEL Maintainer="chuoke"
 
@@ -7,6 +7,9 @@ LABEL Maintainer="chuoke"
 ARG ALPINE_APK_REPO=mirrors.aliyun.com
 ENV ALPINE_APK_REPO=${ALPINE_APK_REPO}
 
+# RUN apk upgrade
+# RUN apk add -X https://dl-cdn.alpinelinux.org/alpine/v3.17/main -u alpine-keys
+
 # swoole 在 testing 库
 RUN echo "https://dl-cdn.alpinelinux.org/alpine/edge/testing/" >> /etc/apk/repositories
 
@@ -14,15 +17,14 @@ RUN if [ ${ALPINE_APK_REPO} ]; then \
         sed -i "s/dl-cdn.alpinelinux.org/${ALPINE_APK_REPO}/g" /etc/apk/repositories; \
     fi
 
-RUN apk update \
-    && apk upgrade \
-    && apk add --no-cache openssl bash curl ca-certificates shadow \
-    nodejs py3-setuptools py3-pip
+# RUN apk update \
+#     && apk upgrade \
+RUN apk add --no-cache openssl bash curl ca-certificates shadow \
+    nodejs
 
 ## Install about PHP
 
-RUN apk update && \
-    apk add --no-cache \
+RUN apk add --no-cache \
     php81 \
     php81-common \
     php81-fpm \
@@ -76,9 +78,11 @@ RUN apk update && \
 COPY php-fpm.conf /etc/php81/php-fpm.d/www.conf
 COPY php.ini /etc/php81/conf.d/custom.ini
 
-# RUN ln -s /usr/bin/php81 /usr/bin/php
+RUN rm -f /usr/bin/php && ln -s /usr/bin/php81 /usr/bin/php && \
+    ln -s /usr/sbin/php-fpm81 /usr/sbin/php-fpm
 
 # Install composer
+# RUN apk add composer # This way make size bigger
 ENV COMPOSER_HOME /composer
 ENV PATH ./vendor/bin:/composer/vendor/bin:$PATH
 ENV COMPOSER_ALLOW_SUPERUSER 1
@@ -87,7 +91,8 @@ RUN php -r "copy('https://getcomposer.org/installer', 'composer-setup.php');" &&
     php -r "unlink('composer-setup.php');"
 
 # Config Composer packagist repo
-ARG COMPOSER_REPO_PACKAGIST=https://mirrors.aliyun.com/composer/
+# ARG COMPOSER_REPO_PACKAGIST=https://mirrors.aliyun.com/composer/
+ARG COMPOSER_REPO_PACKAGIST=https://mirrors.tencent.com/composer/
 ENV COMPOSER_REPO_PACKAGIST=${COMPOSER_REPO_PACKAGIST}
 RUN if [ ${COMPOSER_REPO_PACKAGIST} ]; then \
     composer config -g repo.packagist composer ${COMPOSER_REPO_PACKAGIST} \
@@ -102,15 +107,16 @@ RUN apk --no-cache add nginx && \
 
 # Configure nginx
 COPY nginx.conf /etc/nginx/nginx.conf
+COPY nginx-server-temps /etc/nginx/server-temps
 
 # Install supervisor
-# RUN apk --no-cache add supervisor
-RUN pip install supervisor
+RUN apk --no-cache add supervisor
+# RUN apk add py3-setuptools py3-pip && pip install supervisor
 # Configure supervisord
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
 
 # Clean
-RUN rm /var/cache/apk/*
+RUN rm -rf /var/cache/apk/*
 
 # ensure www-data user exists
 RUN set -x ; \
