--- a/8.0/nginx-server-temps/laravel-octane.conf
+++ b/8.0/nginx-server-temps/laravel-octane.conf
@@ -48,7 +48,7 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        # proxy_pass http://127.0.0.1:8000$suffix;
-        proxy_pass unix:/run/php-fpm.sock$suffix;
+        proxy_pass http://127.0.0.1:8000$suffix;
+        # proxy_pass unix:/run/php-fpm.sock$suffix;
     }
 }
