--- a/8.2/nginx-server-temps/laravel-octane.conf
+++ b/8.2/nginx-server-temps/laravel-octane.conf
@@ -48,6 +48,6 @@ server {
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection $connection_upgrade;
 
-        proxy_pass unix:/run/php-fpm.sock$suffix;
+        proxy_pass http://127.0.0.1:8000$suffix;
     }
 }
