--- a/7.4/Dockerfile
+++ b/7.4/Dockerfile
@@ -107,6 +107,7 @@ COPY nginx-server-temps /etc/nginx/server-temps
 RUN apk --no-cache add supervisor
 # Configure supervisord
 COPY supervisord.conf /etc/supervisor/conf.d/supervisord.conf
+COPY supervisord-site.conf /etc/supervisor/conf.d/supervisord.d/site.conf
 
 # Clean
 RUN rm -rf /var/cache/apk/*
